# dots

./: README.md
.builds/: archlinux.yml
aerc/: aerc.conf
alacritty/: alacritty.yml
bash/: .bash_profile  .bashrc  .bashrc_mac
firefox/: tst.css  userChrome.css  userContent.css
fonts/: fonts.conf
mondo/: _mondo-vars  post-apply
mondo/generator/Xresources/: _mondo-settings  _mondo-template
mondo/generator/i3/: _mondo-settings  _mondo-template
mondo/generator/polybar/: _mondo-settings  _mondo-template
mondo/generator/qt5/: _mondo-settings  _mondo-template
mondo/generator/rofi/: _mondo-settings  _mondo-template
mondo/generator/vim/: _mondo-settings  _mondo-template
mondo/themes/: arc-dark  dune  nikes  thunder
mutt/: muttrc  signature
mutt/colors/: jason.muttrc  patch-highlighting.muttrc
old/: README.md
old/X/: .Xresources  .xinitrc
old/X/xfiles/: colors
old/X/xfiles/themes/: arc-dark  dune  nikes  thunder
old/compton/: compton.conf
old/i3/: config
old/polybar/: config
old/rofi/: config  nikes.rasi  onedark.rasi
old/scripts/colors/: base16-atelier-dune
old/scripts/hdmi/: hdmi_hotplug
old/scripts/i3/: i3get  i3listen.py
old/scripts/polybar/: bat.py  polybar_launch
sway/: config
tmux/: .tmux.conf
vim/: .vimrc
vim/after/syntax/: java.vim  python.vim  vim.vim
waybar/: config  style.css
